<resources>
    <string name="toast_wallet_reset">Your wallet was reset!\nIt will take some time to recover.</string>
    <string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u&gt;safety notes&lt;/u&gt;.</string>
    <string name="wallet_disclaimer_fragment_remind_backup">You need to back up your wallet!</string>
    <string name="blockchain_state_progress_hours">%1$s, %2$d hours behind</string>
    <string name="blockchain_state_progress_days">%1$s, %2$d days behind</string>
    <string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind</string>
    <string name="blockchain_state_progress_months">%1$s, %2$d months behind</string>
    <string name="blockchain_state_progress_downloading">Synchronizing with network</string>
    <string name="blockchain_state_progress_stalled">Synchronization stalled</string>
    <string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
    <string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
    <string name="wallet_address_fragment_clipboard_msg">PEPEPOW address copied to clipboard</string>
    <string name="address_copied">Address copied</string>
    <string name="payments_pay_to_clipboard_no_address">No PEPEPOW address found on clipboard</string>
    <string name="wallet_address_dialog_fragment_hint">To protect your privacy, your address will change once it receives a payment.</string>
    <string name="wallet_balance_fragment_too_much">This amount is quite high for carrying in your pocket. Please move some to a safer place.</string>
    <string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
    <string name="exchange_rates_activity_title">Local Currency</string>
    <string name="exchange_rates_fragment_empty_text">Could not load exchange rates.</string>
    <string name="exchange_rates_fragment_empty_search">Could not find exchange rate.</string>
    <string name="exchange_rates_fragment_default">(default)</string>
    <string name="exchange_rates_fragment_rate">Rate</string>
    <string name="exchange_rates_fragment_balance">Balance</string>
    <string name="exchange_rates_fragment_source">Price from %s</string>
    <string name="exchange_rates_options_search">Search exchange rate</string>
    <string name="exchange_rates_context_set_as_default_title">Set as default</string>
    <string name="wallet_transactions_fragment_empty_text">There are no transactions to display</string>
    <string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment! Have you already backed up your wallet, to protect against loss?</string>
    <string name="wallet_transactions_fragment_coinbase">mined</string>
    <string name="wallet_transactions_fragment_internal">internal</string>
    <string name="wallet_transactions_options_filter">Filter Transactions</string>
    <string name="wallet_transactions_options_filter_all">All payments</string>
    <string name="wallet_transactions_options_filter_received">Received payments</string>
    <string name="wallet_transactions_options_filter_sent">Sent payments</string>
    <string name="wallet_options_safety_menu">Safety</string>
    <string name="wallet_options_encrypt_keys_set">Set spending PIN</string>
    <string name="wallet_options_encrypt_keys_change">Change spending PIN</string>
    <string name="wallet_options_safety">Safety notes</string>
    <string name="wallet_low_storage_dialog_title">Internal device storage space low!</string>
    <string name="wallet_low_storage_dialog_msg">PEPEPOW Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your PEPEPOW will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
    <string name="wallet_low_storage_dialog_button_apps">Manage apps</string>
    <string name="wallet_timeskew_dialog_title">Check date &amp; time settings</string>
    <string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive PEPEPOW due to this problem.\n\nYou should check and if necessary correct your date, time and timezone settings.</string>
    <string name="wallet_version_dialog_title">A new version is available!</string>
    <string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on Google Play.</string>
    <string name="wallet_version_dialog_msg_deprecated">If you don\'t see an update, this probably means your version of Android isn\'t supported any more.</string>
    <string name="wallet_version_dialog_button_market">Google Play</string>
    <string name="wallet_version_dialog_button_binary">Download</string>
    <string name="wallet_old_sdk_dialog_title">Android version is out of date</string>
    <string name="wallet_old_sdk_dialog_message">Chances are that one of the next releases of PEPEPOW Wallet will not support your device any more. In some cases, it can get difficult to spend coins on this device.\n\nUnless you know what you are doing, it is recommended to move out your coins soon.</string>
    <string name="send_coins_activity_title">Send PEPEPOW</string>
    <string name="send_coins_fragment_request_payment_request_progress">Fetching signature from %s...</string>
    <string name="send_coins_fragment_request_payment_request_failed_title">Fetching signature failed</string>
    <string name="send_coins_fragment_request_payment_request_wrong_signature">Wrong signature!</string>
    <string name="send_coins_fragment_payee_verified_by">verified by: %s</string>
    <string name="send_coins_fragment_payee_verified_by_unknown">unknown</string>
    <string name="send_coins_fragment_receiving_address_label">Send to</string>
    <string name="send_coins_fragment_receiving_address_hint">type address or name</string>
    <string name="send_coins_fragment_receiving_address_error">Invalid PEPEPOW address!</string>
    <string name="send_coins_fragment_receiving_address_own">You\'re about to send to yourself!</string>
    <string name="send_coins_fragment_receiving_address_complex">complex\naddress</string>
    <string name="send_coins_fragment_pending">(%s waiting for confirmation)</string>
    <string name="send_coins_fragment_amount_label">Amount to send</string>
    <string name="send_coins_fragment_pin_label">Enter PIN</string>
    <string name="send_coins_fragment_hint_fee_economic">A network fee of %s will be paid.</string>
    <string name="send_coins_fragment_hint_fee_priority">A priority fee of %s will be paid. If you care about low fees, use \'priority\' only if you need confirmation as soon as possible.</string>
    <string name="send_coins_fragment_hint_dusty_send">The amount is too small to send</string>
    <string name="send_coins_fragment_hint_insufficient_money">Insufficient funds</string>
    <string name="send_coins_fragment_hint_empty_wallet_failed">The amount of tiny payments in your wallet doesn\'t add up to a sendable value.</string>
    <string name="send_coins_fragment_hint_replaying">Currently payments are not possible because a replay is in progress.</string>
    <string name="send_coins_fragment_direct_payment_enable">Send payment directly to the payee.</string>
    <string name="send_coins_fragment_direct_payment_ack">Your payment was successfully sent directly.</string>
    <string name="send_coins_fragment_direct_payment_nack">Your payment was rejected via direct connection.</string>
    <string name="send_coins_fragment_direct_payment_failed_title">Direct payment failed</string>
    <string name="send_coins_fragment_direct_payment_failed_msg">Your payment will still be broadcasted via the P2P network.</string>
    <string name="send_coins_fragment_button_send">Send</string>
    <string name="send_coins_fragment_button_back">Back</string>
    <string name="preferences_precision_title">Denomination and precision</string>
    <string name="preferences_precision_summary">Unit to show amounts in. This does not affect computations.</string>
    <string name="preferences_own_name_title">Own name</string>
    <string name="preferences_own_name_summary">Name of yourself, to be added to payment requests. Try to keep it short.</string>
    <string name="preferences_send_coins_autoclose_title">Auto-close send coins dialog</string>
    <string name="preferences_send_coins_autoclose_summary">When the payment is made, the send dialog will close automatically.</string>
    <string name="preferences_trusted_peer_title">Trusted peer</string>
    <string name="preferences_trusted_peer_summary">IP or hostname of single peer to connect to.</string>
    <string name="preferences_trusted_peer_only_title">Skip regular peer discovery</string>
    <string name="preferences_trusted_peer_only_summary">Prevents connecting to any peers besides the trusted peer.</string>
    <string name="preferences_block_explorer_title">Block explorer</string>
    <string name="preferences_block_explorer_summary">External block explorer to use for browsing transactions, addresses and blocks.</string>
    <string name="preferences_data_usage_title">Data usage</string>
    <string name="preferences_data_usage_summary">Show options to restrict data usage on mobile networks.</string>
    <string name="preferences_remind_balance_title">Balance reminder</string>
    <string name="preferences_remind_balance_summary">After a couple of weeks of not being used, the app will notify if there are still coins in the wallet.</string>
    <string name="preferences_show_disclaimer_title">Show disclaimer</string>
    <string name="preferences_show_disclaimer_summary">Have you really read the safety notes? Did you already back up your wallet to a safe place?</string>
    <string name="preferences_report_issue_title">Report issue</string>
    <string name="preferences_initiate_reset_title">Reset block chain</string>
    <string name="preferences_initiate_reset_summary">Reset block chain, transactions and wallet balance. Replay will take a while, so only do this if you know why.</string>
    <string name="preferences_extended_public_key_title">Show xpub</string>
    <string name="preferences_extended_public_key_summary">View the extended public key of your wallet, so it can be imported into other apps and services. Be careful: doing so will disclose your monetary privacy to that app.</string>
    <string name="preferences_category_developer">Developer Options</string>
    <string name="preferences_developer_mode_title">Developer mode</string>
    <string name="preferences_developer_mode_summary">Enable extra diagnostics and debugging tools.</string>
    <string name="preferences_api_category_title">API / Explorer</string>
    <string name="preferences_api_base_url_title">API URL</string>
    <string name="preferences_api_base_url_summary">Endpoint used for explorer bootstrap</string>
    <string name="debug_dashboard_title">API Status</string>
    <string name="debug_dashboard_explorer_height">Explorer block height</string>
    <string name="debug_dashboard_local_header_height">Local SPV header height</string>
    <string name="debug_dashboard_local_wallet_height">Local wallet height</string>
    <string name="debug_dashboard_api_status">Last explorer update</string>
    <string name="debug_dashboard_status_loading">Loading...</string>
    <string name="debug_dashboard_test_address_label">Test address</string>
    <string name="debug_dashboard_refresh">Refresh</string>
    <string name="debug_dashboard_value_unknown">--</string>
    <string name="debug_dashboard_recent_logs">Recent logcat highlights</string>
    <string name="debug_dashboard_logs_loading">Reading logs...</string>
    <string name="preferences_sync_mode_title">Sync Mode</string>
    <string name="preferences_sync_mode_summary">Choose how to synchronize blockchain data</string>
</resources>