<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<ListPreference
		android:defaultValue="4/0"
		android:entries="@array/preferences_precision_labels"
		android:entryValues="@array/preferences_precision_values"
		android:key="btc_precision"
		android:summary="@string/preferences_precision_summary"
		android:title="@string/preferences_precision_title" />

    <EditTextPreference
        android:key="own_name"
        android:summary="@string/preferences_own_name_summary"
        android:title="@string/preferences_own_name_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="send_coins_autoclose"
        android:summary="@string/preferences_send_coins_autoclose_summary"
        android:title="@string/preferences_send_coins_autoclose_title" />


    <EditTextPreference
        android:key="trusted_peer"
        android:summary="@string/preferences_trusted_peer_summary"
        android:title="@string/preferences_trusted_peer_title"
        android:visible="false" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="trusted_peer_only"
        android:summary="@string/preferences_trusted_peer_only_summary"
        android:title="@string/preferences_trusted_peer_only_title"
        android:visible="false" />

    <ListPreference
        android:defaultValue="https://explorer.pepepow.net"
        android:entries="@array/preferences_block_explorer_labels"
        android:entryValues="@array/preferences_block_explorer_values"
        android:key="block_explorer"
        android:summary="@string/preferences_block_explorer_summary"
        android:title="@string/preferences_block_explorer_title"
        android:visible="false" />

    <Preference
        android:key="data_usage"
        android:summary="@string/preferences_data_usage_summary"
        android:title="@string/preferences_data_usage_title" >
        <intent
            android:targetClass="com.android.settings.Settings$DataUsageSummaryActivity"
            android:targetPackage="com.android.settings" />
    </Preference>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="remind_balance"
        android:summary="@string/preferences_remind_balance_summary"
        android:title="@string/preferences_remind_balance_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="disclaimer"
        android:summary="@string/preferences_show_disclaimer_summary"
        android:title="@string/preferences_show_disclaimer_title" />

	<CheckBoxPreference
		android:defaultValue="false"
		android:key="labs_qr_payment_request"
		android:summary="@string/preferences_enable_payment_request_summary"
		android:title="@string/preferences_enable_payment_request_title" />

    <PreferenceCategory
        android:title="@string/preferences_category_developer">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="developer_mode"
            android:summary="@string/preferences_developer_mode_summary"
            android:title="@string/preferences_developer_mode_title" />

        <ListPreference
            android:defaultValue="FAST_API_10POW"
            android:dependency="developer_mode"
            android:entries="@array/preferences_sync_mode_labels"
            android:entryValues="@array/preferences_sync_mode_values"
            android:key="sync_mode"
            android:summary="@string/preferences_sync_mode_summary"
            android:title="@string/preferences_sync_mode_title" />


    </PreferenceCategory>

    <PreferenceCategory
        android:key="developer_api_section"
        android:title="@string/preferences_api_category_title">



        <ListPreference
            android:defaultValue="https://explorer.pepepow.net"
            android:entries="@array/preferences_api_explorer_labels"
            android:entryValues="@array/preferences_api_explorer_values"
            android:key="developer_api_base_url"
            android:summary="@string/preferences_api_base_url_summary"
            android:title="@string/preferences_api_base_url_title" />


    </PreferenceCategory>

</PreferenceScreen>
